Finally fixed a formatting bug that was making things not align correctly.

--- a/styles.css
+++ b/styles.css
@@ -44,3 +44,11 @@ body {
 	-moz-box-shadow: 0 0 20px red;
 	box-shadow:0 0 20px red;	
 }
+
+.playerTitle {
+	color: blue;
+	font-size: 24;
+	font-family: Helvetica, Arial, sans-serif;
+	outline-width: 2px;
+
+}
